css/styles.css
/* Parametros */
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');

@font-face {
    font-family: 'Casta-Thin';
    src: url(../fonts/Casta-Thin.otf);
}

/* @font-face {
    font-family: 'Vercetti-Regular';
    src: url(../fonts/Vercetti-Regular.ttf);
} */

@font-face {
    font-family: 'Franklin-Gothic-Heavy';
    src: url(../fonts/Franklin-Gothic-Heavy.TTF);
}

@font-face {
    font-family: 'Franklin-Gothic-Book';
    src: url(../fonts/Franklin-Gothic-Book.TTF);
}

@font-face {
    font-family: 'Gruppo-Regular';
    src: url(../fonts/Gruppo-Regular.ttf);
}


/* Variables */
:root {
    /* Colores */
    --afro-black: #181818;
    --afro-yellow: #DEF716;
    --afro-red: #D93100;
    --afro-light-red: #DD6144;
    --afro-purple: #BC1A8F; 
    --afro-light-purple: #BB7FB4; 
    --afro-green: #89FC59; 
    --afro-light-green: #A7D992;


    /* Valores comunes */
    --height-header-mob: 48px;
    --height-header-desk: 68px;
    --padding-between-text: 10px;
    
    --padding-sides: 4%; 
    --padding-between-elements: 10%; 
    
    --padding-section: var(--padding-between-elements) var(--padding-sides);
    --padding-hero-mob: calc(var(--padding-between-elements) + var(--height-header-mob)) var(--padding-sides) var(--padding-between-elements) var(--padding-sides);




    /* Bordes */
    --border: 2px solid var(--afro-black);

    /* Tipografía */
    --main-font: 'Franklin-Gothic-Heavy', 'Arial Narrow', Arial, sans-serif;
    --main-font-light: 'Franklin-Gothic-Book', Arial, sans-serif; 
    --secundary-font: 'Gruppo-Regular', sans-serif;
    /* --text-font: 'Vercetti-Regular'; */
    --text-font: 'Ubuntu', sans-serif;

}


    
/* Normalizadores (Hoja de estilos) */
*{
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
    /* outline: 2px dashed purple; */
}

body {
    background-color: var(--afro-black); 
    overflow-x: hidden;
}

a {
    text-decoration: none;
    cursor: url("../img/pointer.png"), pointer;
}

ul {
    list-style: none;
}

/* Background color */
.bg-red {
    background-color: var(--afro-red);
}

.bg-light-red {
    background-color: var(--afro-light-red);
}

.bg-purple {
    background-color: var(--afro-purple);
}

.bg-light-purple {
    background-color: var(--afro-light-purple);
}

.bg-yellow {
    background-color: var(--afro-yellow);
}

/* Tipografía */

p {
    font-family: var(--text-font); 
    font-size: 16px;
    padding-bottom: 10px;
    line-height: 1.4em;
}


h1 {
    font-family: var(--main-font);
    font-size: 1.8em; 
    text-transform: uppercase;
    line-height: 1em;
}

h2 {
    font-family: var(--secundary-font);
    font-size: 36px;
    text-transform: uppercase;
    line-height: 0.8em;
}

h3 {
    font-family: var(--secundary-font); 
    font-size: 40px;
}

h4 {
    font-family: var(--main-font);
    font-size: 20px; 
    text-transform: uppercase;
    padding-bottom: 2%;
}

h5 {
    font-family: var(--secundary-font);
    font-size: 26px;
    line-height: 1em;
} 

h6{
    font-family: var(--main-font);
    font-size: 16px; 
    text-transform: uppercase;
}

.big-text {
    font-family: var(--secundary-font);
    font-size: 60px;
    text-transform: uppercase;
    line-height: 0.9em;
}

.item-menu {
    font-family: var(--main-font); 
    font-size: 24px; 
    text-transform: uppercase;
    color: var(--afro-yellow); 
}

/* Botón */

.btn {
    font-family: var(--main-font);
    font-size: 16px; 
    text-transform: uppercase;
    color: var(--afro-black);
    background-color: var(--afro-yellow);
    border: var(--border);
    border-radius: 100px;
    padding: 2px 10px;     
}

.btn:hover {
    color: var(--afro-yellow);
    border-color: #000000;
    background-color: var(--afro-black);
    box-shadow: 6px 6px 6px 6px rgba(0, 0, 0, 0.30) inset;
}



/* Reglas recursivas (elementos que se utilicen más de una vez pero no se puedan normalizar, ya que son un componente que tiene diferentes estilos en las diferentes aplicaciones. (botones, o por ejemplo quitar unos bordes... etc) */






/* Reglas generales (marco, header, footer, nav (menú), ventana modal (pop up) */

/* Header */
header {
    width: 100%;
    height: var(--height-header-mob);
    position: fixed; 
    top: 0px;
    z-index: 2000; 
    background-color: var(--afro-yellow);
    border-top: var(--border);
    border-bottom: var(--border);

    /*flex*/
    display: flex;
    justify-content: center;
    align-items: center;   
}



.logo {
    /* Nota: Importante para que no haya conflicto en la lógica con el div del icono hamburguesa y botón */
    z-index: 3000; 
}


.logo img {
    width: 32px;
    height: 100%;     
} 


/* Botón hamburguesa y Botón */
header div {
    width: 100%;
    height: var(--height-header-mob); 
    position: absolute;
    top: 0px;
    right: 0px;
    z-index: 1000;
 

    /*flex*/
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header div img {
    height: 100%;
    padding: 10px;
    margin-right: 10px;
    width: 50px;    
}

.btn-menu {
    height: 100%;
    font-family: var(--main-font);
    color: var(--afro-black);
    font-size: 20px;
    padding: 12px;
    border-left: var(--border);
    transition: 2ms;
}

.btn-menu:hover {
    color: var(--afro-yellow);
    background-color: var(--afro-black);
}
/* Fin Header */

/* Footer */

footer p {
    font-family: var(--main-font-light);
}
.top-footer {
    text-align: center;
    padding: 10%; 
    color: var(--afro-black); 
}

.top-footer img {
    width: 20%;
    padding-bottom: 40px;
}

.top-footer > div {
    text-align: start; 
}

.top-footer p {
    font-size: 18px;
}

.top-footer a {
    font-family: var(--main-font);
    color: var(--afro-black);
}

.top-footer a:hover {
    text-decoration: underline;

}

.buttom-footer, .buttom-footer a {
    color: var(--afro-yellow);
    font-family: var(--secundary-font);
    padding: 2%;
    text-align: center;
}

.rrss {
    padding-bottom: 10px;

    /*flex*/
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.rrss img {
    width: 50px;
    padding: 0px;
    margin-left: 10px; 
}

.rrss img:hover {
    border: var(--border);
    box-shadow: 6px 6px 6px 6px rgba(0, 0, 0, 0.10) inset;
}

.rrss p {
    padding-bottom: 0px;
}

/* Fin Footer */



/* Hero */

.hero {
    display: flex; 
    flex-direction: column-reverse;
}

.hero > .section-text {
    padding: var(--padding-hero-mob);
}

/* Componentes Comunes */

.main-section {
    display: flex; 
    flex-direction: column-reverse;
}

/* Sección con imagen */
.section-img {
    border-bottom: var(--border);
    padding: var(--padding-section);
}

.section-img img{
    width: 100%; 
    object-fit: contain;
}

/* Sección con texto */
.section-text {
    color: var(--afro-black);
    border-bottom: var(--border);
    padding: var(--padding-section);
    
     
    /* Flex */
    display: flex; 
    flex-wrap: wrap; 
}

.section-text h1{
    order: 2; 
    padding-top: 10px; 
}

.section-text h5{
    order: 1; 
}

.section-text p {
    padding-bottom: 6%;
}


/* Sección con fondo negro */

.section-black {
    color: var(--afro-yellow); 
    padding: var(--padding-section);
}

.section-black h2, .section-black div {
    padding-bottom: 4%;
}





/* Reglas Especificas */



/* Responsive */

@media all and (min-width:1280px) {

    /* Tipografía */

    p {
        font-size: 20px;
        line-height: 1.4em; 
    }


    h1 {
        font-size: 46px; 
    }

    h2 {
        font-size: 60px;
    }

    h3 {
        font-size: 50px;
    }

    h4 {
        font-size: 30px; 
    }

    h5 {
        font-size: 32px;
    } 

    h6{
        font-size: 20px; 
    }

    .big-text {
        font-size: 100px;
  
    }

    .item-menu {
        font-size: 30px; 
    }

    /* Botón */

    .btn {
        font-size: 20px;
    }

    /* Header Desk */
        header {
            height: var(--height-header-desk);  
        }
        
        .logo img {
            width: 48px; 
        }
        
        header div {
            width: 100%;
            height: var(--height-header-desk); 
            position: absolute;
            top: 0px;
            right: 0px;
            margin: auto; 
            z-index: 2000; 
        
            /*flex*/
            display: flex;
            justify-content: flex-end;
            align-items: center;
        }
        
        .btn-menu {
            font-size: 36px;
            
        }

    /* Fin Header Desk */

    /* Footer - Desk */

    .top-footer {
        padding: 3%; 
    
        /*flex*/
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .top-footer > a {
        display: block; 
        width: 40%; 
    }

    .top-footer > div {
        width: 60%;
    }
    
    .top-footer img {
        width: 25%;
        padding-bottom: 0px;
    }

    .top-footer p {
        font-size: 24px;
        padding-bottom: 20px;
    }

    .rrss {
        padding-bottom: 20px;
    }

    .rrss p {
        padding-bottom: 0px;
    }

    .rrss img {
        width: 60px;
    }

    .buttom-footer {
        padding: 1%;

        /*flex*/
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .buttom-footer div {
        width: 20%;
        text-align: end;
    }

    .buttom-footer a {
        padding-right: 20px; 
    }

    .buttom-footer a:last-child {
        padding-right: 0px; 
    }

    .buttom-footer p {
        padding: 0px;
        font-size: 14px;
    }


    /* Hero - Desk */
    .hero, .main-section {
        height: calc(100vh --height-header-desk); 
    
        /*flex*/
        display: flex;
        /* justify-content: center; */
        align-items: flex-end;
        flex-direction: row;
    }



    /* Sección con imagen - Desk */
    .section-img {
        width: 50%;
        height: 100%;
        border-right: var(--border);

        /*flex*/
        display: flex;
        justify-content: center;
        align-items: flex-end; 
    }

    .section-img img{
        width: 100%;
        
    }

    /* Sección con texto - Desk */
    .section-text {
        width: 50%;
        
        /*flex*/
        display: flex;
        justify-content: flex-start;
        align-items: center;
        flex-wrap: wrap;
    }

    /* Sección fondo negro - Desk */
   .section-black {
        padding: 0px; 
        /*flex*/
        display: flex;
        align-items: flex-end;
    } 

    .section-black div {
        padding: var(--padding-section);
        width: 50%;
    }


}

